# nvda-mathcat

./: README.md  pyproject.toml
.github/workflows/: fetchAssets.yaml
MathCAT/: libmathcat_py.pyd
MathCAT/Rules/: definitions.yaml  intent.yaml  prefs.yaml
MathCAT/Rules/Intent/: calculus.yaml  general.yaml  geometry.yaml
assets/: libmathcat_py.pyd
assets/Rules/: definitions.yaml  prefs.yaml
assets/Rules/Braille/: definitions.yaml
assets/Rules/Braille/ASCIIMath/: ASCIIMath_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
assets/Rules/Braille/ASCIIMath-fi/: definitions.yaml  unicode-full.yaml  unicode.yaml
assets/Rules/Braille/CMU/: CMU_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
assets/Rules/Braille/LaTeX/: LaTeX_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
assets/Rules/Braille/Nemeth/: Nemeth_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
assets/Rules/Braille/Swedish/: Swedish_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
assets/Rules/Braille/UEB/: UEB_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
assets/Rules/Braille/Vietnam/: Vietnam_Rules.yaml  definitions.yaml  unicode-full.yaml  unicode.yaml
assets/Rules/Intent/: general.yaml  linear-algebra.yaml  probability.yaml
assets/Rules/Languages/de/: ClearSpeak_Rules.yaml  SimpleSpeak_Rules.yaml  definitions.yaml  navigate.yaml  overview.yaml  unicode-full.yaml  unicode.yaml
assets/Rules/Languages/en/: ClearSpeak_Rules.yaml  SimpleSpeak_Rules.yaml  definitions.yaml  navigate.yaml  overview.yaml  (+2 more)
(+89 files in other folders)
